unpackaged/main/default/objects/ETSALES_Account_Profile__c/ETSALES_Account_Profile__c.object-meta.xml
<CustomObject>
    <label>Account Profile</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Strategic Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>