unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Accounts_strategic_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Accounts_strategic_Initiative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accounts strategic Initiative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>