unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actions</label>
    <type>TextArea</type>
</CustomField>