unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Annual_Account_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Account_Target__c</fullName>
    <label>Annual Account Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>