unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Completed_Projects_Value__c.field-meta.xml
<CustomField>
    <fullName>Completed_Projects_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Projects Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>