unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Describe_their_Business__c.field-meta.xml
<CustomField>
    <fullName>Describe_their_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Describe their Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>