unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/ETSALES_Account__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Strategic_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>