unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Key_People__c.field-meta.xml
<CustomField>
    <fullName>Key_People__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key People</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>