unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Key_trends_In_geography__c.field-meta.xml
<CustomField>
    <fullName>Key_trends_In_geography__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key trends In geography</label>
    <length>255</length>
    <type>Text</type>
</CustomField>