unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Length_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Relationship__c</fullName>
    <formula>TEXT(YEAR(TODAY()) -  VALUE(TEXT(Client_Since__c)))  &amp; &#39; Year&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Relationship</label>
    <type>Text</type>
</CustomField>