unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Main_Location__c.field-meta.xml
<CustomField>
    <fullName>Main_Location__c</fullName>
    <label>Main Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>