unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Market_driven_problems__c.field-meta.xml
<CustomField>
    <fullName>Market_driven_problems__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Market driven problems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>