unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/No_of_Completed_Projects__c.field-meta.xml
<CustomField>
    <fullName>No_of_Completed_Projects__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Completed Projects</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>