unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunities</label>
    <type>TextArea</type>
</CustomField>