unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Our_Main_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Our_Main_Relationships__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Our Main Relationships</label>
    <type>TextArea</type>
</CustomField>