unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Our_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Our_Value_Proposition__c</fullName>
    <label>Our Value Proposition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>