unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Plans_for_next_5_years__c.field-meta.xml
<CustomField>
    <fullName>Plans_for_next_5_years__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plans for next 5 years</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>