unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Relationship_length__c.field-meta.xml
<CustomField>
    <fullName>Relationship_length__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship length</label>
    <type>TextArea</type>
</CustomField>