unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Stream__c</fullName>
    <label>Revenue Stream</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>