unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>