unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strengths</label>
    <type>TextArea</type>
</CustomField>