unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Threats</label>
    <type>TextArea</type>
</CustomField>