unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Total_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Total_Complaints__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Complaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>