unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/What_do_they_provide__c.field-meta.xml
<CustomField>
    <fullName>What_do_they_provide__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What do they provide</label>
    <type>TextArea</type>
</CustomField>