unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/What_size_are_they__c.field-meta.xml
<CustomField>
    <fullName>What_size_are_they__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What size are they</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>