unpackaged/main/default/objects/ETSALES_Account_Profile__c/fields/Who_are_their_clients__c.field-meta.xml
<CustomField>
    <fullName>Who_are_their_clients__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Who are their clients</label>
    <type>TextArea</type>
</CustomField>